fixed whitespace at bottom, still scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
 html {
-  height: 100%
+  min-height: 100%
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   background-image: linear-gradient(45deg, blueviolet, purple, hotpink);
   background-repeat: no-repeat;
   background-size: auto;
